--- a/Pages/ReceivingReports.cshtml
+++ b/Pages/ReceivingReports.cshtml
@@ -106,10 +106,13 @@
                             @* <input asp-for="Report.BasedOnDocument" class="form-control" required /> *@
                             <select asp-for="Report.BasedOnDocument" class="form-select" id="BasedOnDocument" name="BasedOnDocument" >
                                 <option value="">Select Based On document</option>
-                                @foreach (var document in Model.DocumentList)
-                                {
-                                    <option value="@document.DocType">@document.DocType</option>
+                                @if(Model.DocumentList != null){
+                                     @foreach (var document in Model.DocumentList)
+                                    {
+                                        <option value="@document.DocType">@document.DocType</option>
+                                    }
                                 }
+                               
                                 @* <option value="Purchase order">Purchase order</option>
                                 <option value="Return order">Return order</option>
                                 <option value="Transfer from another warehouse">Transfer from another warehouse</option> *@
@@ -229,7 +232,7 @@
                                 <div class="d-flex justify-content-between">
                                     <div class="form-group mb-4" style="width: 48%;">
                                         <label>@Model.lblUnitPrice</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
-                                        <input asp-for="ItemsForReport[@i].UnitPrice" type="number"  id="UnitPrice_@i"  step="0.01" name="ItemsForReport[@i].UnitPrice" class="form-control"  />
+                                        <input asp-for="ItemsForReport[@i].UnitPrice" type="number"  id="UnitPrice_@i"  step="any" name="ItemsForReport[@i].UnitPrice" class="form-control"  />
                                     </div>
 
                                     <div class="form-group mb-4" style="width: 48%;">
@@ -396,7 +399,7 @@
                 <div class="d-flex justify-content-between">
                     <div class="form-group mb-4" style="width: 48%;">
                         <label>Unit Price</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
-                        <input type="number" id="UnitPrice_${itemIndex}" name="ItemsForReport[${itemIndex}].UnitPrice" class="form-control" required/>
+                        <input type="number" step="any" id="UnitPrice_${itemIndex}" name="ItemsForReport[${itemIndex}].UnitPrice" class="form-control" required/>
                     </div>
                     <div class="form-group mb-4" style="width: 48%;">
                         <label>Total Price</label>
