--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -134,7 +134,7 @@
 
                 @if (Model.CanManageItems)
                 {
-                    <li class="nav-item @(Context.Request.Path == "/ReceivingItems" ||
+                    <li class="nav-item @(Context.Request.Path == "/ReceivingItems" || Context.Request.Path == "/ViewReceivingReport" || Context.Request.Path == "/EditReceivingReport" || Context.Request.Path == "/ReceivingReports" ||
                     Context.Request.Path == "/AddUnit" ? "active" : "" )">
                         <a asp-area="" asp-page="/ReceivingItems" class="nav-link">
                             <span class="sidebar-icon">
