--- a/Pages/Alerts/Index.cshtml
+++ b/Pages/Alerts/Index.cshtml
@@ -41,6 +41,11 @@
                     class="btn justify-content-center top-big-btn btn-outline-gray-600 d-inline-flex align-items-center"
                     onclick="setActiveButton('reorder')">Re-order</button>
             </div>
+            <div class="btn-group ms-2 ms-lg-3">
+                <button id="btn-notmoved"
+                    class="btn justify-content-center top-big-btn btn-outline-gray-600 d-inline-flex align-items-center"
+                    onclick="setActiveButton('notmoved')">Not Moved</button>
+            </div>
         </div>
     </div>
 
@@ -356,40 +361,40 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Model.ItemCardReorder)
+                        @foreach (var item in Model.ItemCardNotMoved)
                         {
                             <tr>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.ItemCode)
+                                    @Html.DisplayFor(modelItem => item.ItemCard.ItemCode)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.ItemName)
+                                    @Html.DisplayFor(modelItem => item.ItemCard.ItemName)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.ItemDescription)
-                                </td>
-
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.QuantityAvailable)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CreatedAt)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.LastActivity)
-
-                                <td>
-                                        @Html.DisplayFor(modelItem => item.Minimum)
-                                </td>
-                                <td>
-                                        @Html.DisplayFor(modelItem => item.ReorderLimit)
-                                </td>
-                                <td>
-                                        @Html.DisplayFor(modelItem => item.Ceiling)
+                                    @Html.DisplayFor(modelItem => item.ItemCard.ItemDescription)
                                 </td>
 
                                 <td>
-                                        @Html.DisplayFor(modelItem => item.Store.StoreId)
+                                    @Html.DisplayFor(modelItem => item.ItemCard.QuantityAvailable)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.ItemCard.CreatedAt)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.DateOfEntry)
+
+                                <td>
+                                        @Html.DisplayFor(modelItem => item.ItemCard.Minimum)
+                                </td>
+                                <td>
+                                        @Html.DisplayFor(modelItem => item.ItemCard.ReorderLimit)
+                                </td>
+                                <td>
+                                        @Html.DisplayFor(modelItem => item.ItemCard.Ceiling)
+                                </td>
+
+                                <td>
+                                        @Html.DisplayFor(modelItem => item.ItemCard.Store.StoreId)
                                 </td>
                                 <td>
                                     @* <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> | *@
@@ -447,6 +452,7 @@
             if (hash && hash.startsWith('#sectionn-')) {
                 const sectionn = hash.replace('#sectionn-', '');
                 showSection(sectionn);
+                 setActiveButton(sectionn);
             } else {
                 // Default to 'minimum' if no hash
                 showSection('minimum');
@@ -479,7 +485,7 @@
         }
 
         // Call sectionn display logic
-        showsectionn(sectionn);
+        showSection(sectionn);
     }
 </script>
 </body>
